k8s/kustomize/environments/dev/ingress.yaml
# --- Ingress Router pre DEV prostredie s SSL (HTTPS) ---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    # Hovorí Traefiku, aby načítal požiadavky na HTTPS port (websecure)
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    # Povolí TLS šifrovanie
    traefik.ingress.kubernetes.io/router.tls: "true"
    # Použije certresolver "myresolver" (Let's Encrypt), ktorý nadefinujeme v Traefiku
    traefik.ingress.kubernetes.io/router.tls.certresolver: myresolver
spec:
  tls:
    - hosts:
        - dev.adrianprogramuje.sk
      secretName: dev-cert-secret # Miesto, kde Kubernetes uloží stiahnutý SSL certifikát
  rules:
    - host: dev.adrianprogramuje.sk
      http:
        paths:
          # Smerovanie API na backend
          - path: /tasks
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3000
          # Smerovanie na frontend (React)
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
